--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ header {
 }
 
 .promo {
-	background:url(/img/bg/uber_bg.png);
+	background:url(/src/img/bg/uber_bg.png);
 	min-height: 800px;
 	padding: 143px 0 21px 0;
 }
